Remove commented code and replace deprecated Locale constructor in unit-test.
Signed-off-by: Sjoerd Talsma <sjoerdtalsma@users.noreply.github.com>